<resources>
    <string name="app_name">LaEleccion</string>
    <string name="titulo">Fotografía</string>
    <string name="sub_titulo">¿Eres un experto en fotografía?</string>
    <string name="puntos">puntos</string>
    <string name="mas4">Enhorabuena</string>
    <string name="menos3">Que pena</string>
    <string name="ranking">Ranking</string>
    <string name="nombre">¿Nos dices tu nombre?</string>

    <string name="siguiente">Siguiente</string>
    <string name="volver">Volver</string>
    <string name="nivel1">Nivel Básico</string>
    <string name="nivel2">Nivel Medio</string>
    <string name="nivel3">Nivel Avanzado</string>
    /*pregunta 1*/
    <string name="pregunta1.1">La palabra fotografía proviene del griego que significa:</string>
    <string name="respuesta1.1.1">Stop Motion</string>
    <string name="respuesta1.1.2">Tiempo Congelado</string>
    <string name="respuesta1.1.3C">Dibujar con luz o grabar con luz</string>
    /*pregunta2*/
    <string name="pregunta1.2">¿Qué filtro se utiliza para eliminar los reflejos de superficies metálicas y no metálicas?</string>
    <string name="respuesta1.2.1">Filtro Ultra violeta</string>
    <string name="respuesta1.2.2C">Filtro polarizador</string>
    <string name="respuesta1.2.3">Filtro de densidad neutra</string>
    /*pregunta3*/
    <string name="pregunta1.3">La distancia focal clásica para tomar un retrato es de:</string>
    <string name="respuesta1.3.1">60mm</string>
    <string name="respuesta1.3.2C">50mm</string>
    <string name="respuesta1.3.3">85mm</string>
    /*pregunta4*/
    <string name="pregunta1.4">Encuadrar es equivalente a:</string>
    <string name="respuesta1.4.1">Ajustar un motivo en el visor mediante el zoom</string>
    <string name="respuesta1.4.2">Fotografiar aquello que más te interesa en una escena</string>
    <string name="respuesta1.4.3C">Aislar un motivo de su entorno</string>
    /*pregunta5*/
    <string name="pregunta1.5">El obturador, además de regular el tiempo de exposición:</string>
    <string name="respuesta1.5.1C">Protege al sensor de la luz</string>
    <string name="respuesta1.5.2">Da luminosidad al objetivo</string>
    <string name="respuesta1.5.3">Le da perspectiva a tu fotografía</string>

    /*nivel 2*/
    /*pregunta 1*/
    <string name="pregunta2.1">¿Qué es el efecto bokeh en fotografía?</string>
    <string name="respuesta2.1.1">La nitidez y claridad de la imagen</string>
    <string name="respuesta2.1.2C">El desenfoque artístico del fondo</string>
    <string name="respuesta2.1.3">El contraste entre luces y sombras</string>
    /*pregunta2*/
    <string name="pregunta2.2">¿Qué papel juega la regla de los tercios en composición fotográfica?</string>
    <string name="respuesta2.2.1">Ayuda a calcular la exposición adecuada</string>
    <string name="respuesta2.2.2C">Divide la imagen en nueve secciones para crear equilibrio</string>
    <string name="respuesta2.2.3">Indica la profundidad de campo de la fotografía</string>
    /*pregunta3*/
    <string name="pregunta2.3">¿Cuál es la función del diafragma en modo manual en una cámara?</string>
    <string name="respuesta2.3.1">Controlar la velocidad de obturación</string>
    <string name="respuesta2.3.2">Cambiar el enfoque automático</string>
    <string name="respuesta2.3.3C">Ajustar la apertura para regular la cantidad de luz</string>
    /*pregunta4*/
    <string name="pregunta2.4">¿Qué significa el término "RAW" en fotografía digital?</string>
    <string name="respuesta2.4.1C">Una imagen sin procesar directamente desde el sensor</string>
    <string name="respuesta2.4.2">Un formato de archivo comprimido para ahorrar espacio</string>
    <string name="respuesta2.4.3">Un modo de disparo rápido para capturar movimiento</string>
    /*pregunta5*/
    <string name="pregunta2.5">¿En qué situación se utilizaría comúnmente un filtro de densidad neutra (ND) en fotografía?</string>
    <string name="respuesta2.5.1">Para intensificar los colores en un atardecer</string>
    <string name="respuesta2.5.2C">Para reducir la cantidad de luz en condiciones brillantes</string>
    <string name="respuesta2.5.3">Para agregar efectos de viñeta a la imagen</string>

    /*nivel 3*/
    /*pregunta 1*/
     <string name="pregunta3.1">¿Qué es la “ley de reciprocidad” en la fotografía?</string>
    <string name="respuesta3.1.1C">La relación entre la apertura y la velocidad de obturación</string>
    <string name="respuesta3.1.2">La relación entre el ISO y la velocidad de obturación</string>
    <string name="respuesta3.1.3">La relación entre la apertura y el ISO</string>
    /*pregunta2*/
     <string name="pregunta3.2">¿Qué es un “histograma” en la fotografía?</string>
    <string name="respuesta3.2.1">Objetivo de enfoque fijo</string>
    <string name="respuesta3.2.2">Objetivo de zoom</string>
    <string name="respuesta3.2.3C">Objetivo de enfoque automático</string>
    /*pregunta3*/
     <string name="pregunta3.3">¿Qué es la velocidad de obturación en fotografía?</string>
    <string name="respuesta3.3.1C">Tiempo que el obturador está abierto</string>
    <string name="respuesta3.3.2">Cantidad de luz en la foto</string>
    <string name="respuesta3.3.3">Distancia de enfoque nítido</string>
    /*pregunta4*/
     <string name="pregunta3.4">¿Qué es la distorsión de la lente en fotografía?</string>
    <string name="respuesta3.4.1">Cantidad de luz en la foto</string>
    <string name="respuesta3.4.2C">Efecto de estiramiento en los bordes de la imagen</string>
    <string name="respuesta3.4.3">Tiempo que el obturador está abierto</string>
    /*pregunta5*/
     <string name="pregunta3.5">¿Qué es la “aberración cromática” en la fotografía?</string>
    <string name="respuesta3.5.1C">Un defecto que causa que los colores no se enfoquen en el mismo punto</string>
    <string name="respuesta3.5.2">Un defecto que causa que una imagen sea más brillante en el centro que en los bordes</string>
    <string name="respuesta3.5.3">Un defecto que causa que una imagen sea más oscura en el centro que en los bordes</string>
</resources>