<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="275dp"
        android:layout_height="108dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/anton"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/mermelada"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/baloo_paaji_2"
        android:text="@string/sub_titulo"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/basico"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/botones"
        android:fontFamily="@font/baloo_paaji_2"
        android:onClick="nivelBasico"
        android:text="@string/nivel1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitulo" />

    <Button
        android:id="@+id/medio"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/botones"
        android:fontFamily="@font/baloo_paaji_2"
        android:onClick="nivelMedio"
        android:text="@string/nivel2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basico" />

    <Button
        android:id="@+id/avanzado"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/botones"
        android:fontFamily="@font/baloo_paaji_2"
        android:onClick="nivelAvanzado"
        android:text="@string/nivel3"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medio"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="259dp"
        android:layout_height="204dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/titulo"
        android:src="@drawable/camara_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avanzado" />


</androidx.constraintlayout.widget.ConstraintLayout>