<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="412dp"
        android:layout_height="118dp"
        android:layout_marginBottom="667dp"
        android:background="@color/mermelada"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nombreSeccion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/anton"
        android:text="@string/nivel3"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/respuesta7"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/opciones"
        android:fontFamily="@font/baloo_paaji_2"
        android:onClick="comprobarRespuestas3"
        android:text="@string/respuesta3.1.1C"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:iconTint="@color/fuxia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pregunta3"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/black" />

    <Button
        android:id="@+id/siguiente3"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/botones"
        android:backgroundTint="@color/mermelada"
        android:fontFamily="@font/baloo_paaji_2"
        android:onClick="cambiarPreg3"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/siguiente"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/respuesta9"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/opciones"
        android:fontFamily="@font/baloo_paaji_2"
        android:onClick="comprobarRespuestas3"
        android:text="@string/respuesta3.1.2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:iconTint="@color/fuxia"
        app:layout_constraintEnd_toEndOf="@+id/respuesta7"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/respuesta7"
        app:layout_constraintTop_toBottomOf="@+id/respuesta7"
        app:strokeColor="@color/black" />

    <Button
        android:id="@+id/respuesta8"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/opciones"
        android:fontFamily="@font/baloo_paaji_2"
        android:onClick="comprobarRespuestas3"
        android:text="@string/respuesta3.1.3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:iconTint="@color/fuxia"
        app:layout_constraintEnd_toEndOf="@+id/respuesta9"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/respuesta9"
        app:layout_constraintTop_toBottomOf="@+id/respuesta9"
        app:strokeColor="@color/black" />

    <TextView
        android:id="@+id/pregunta3"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/baloo_paaji_2"
        android:text="@string/pregunta3.1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="265dp"
        android:layout_height="260dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="176dp"
        android:contentDescription="@string/titulo"
        android:src="@drawable/camara_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
</androidx.constraintlayout.widget.ConstraintLayout>