<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="118dp"
        android:layout_marginBottom="667dp"
        android:background="@color/mermelada"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nombreSeccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/nivel1"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="265dp"
        android:layout_height="260dp"
        android:layout_marginTop="447dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="-150dp"
        android:contentDescription="@string/titulo"
        android:src="@drawable/camara_l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pregunta"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/pregunta"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/baloo_paaji_2"
        android:text="@string/pregunta1.1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/respuesta1"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/opciones"
        android:fontFamily="@font/baloo_paaji_2"
        android:onClick="comprobarRespuestas"
        android:text="@string/respuesta1.1.1"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:iconTint="@color/fuxia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pregunta"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/black" />

    <Button
        android:id="@+id/resouesta2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/opciones"
        android:fontFamily="@font/baloo_paaji_2"
        android:onClick="comprobarRespuestas"
        android:text="@string/respuesta1.1.2"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:iconTint="@color/fuxia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respuesta1"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/black" />

    <Button
        android:id="@+id/respuesta3"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/opciones"
        android:fontFamily="@font/baloo_paaji_2"
        android:onClick="comprobarRespuestas"
        android:text="@string/respuesta1.1.3C"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:iconTint="@color/fuxia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resouesta2"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/black" />

    <Button
        android:id="@+id/siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@drawable/botones"
        android:backgroundTint="@color/mermelada"
        android:fontFamily="@font/baloo_paaji_2"
        android:onClick="cambiarPreg"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/siguiente"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>